Criando paths http para user session
